docs: swaggerにauthを追加
