# src/controller/menu_controller.go
@@ -14,6 +14,7 @@ type MenuController struct{}
 // @Produce json
 // @accept application/x-json-stream
 // @Success 200
+// @Security BasicAuth
 // @Router /menu/top [get]    
 func (pc MenuController) Top(c *gin.Context) {
     c.JSON(http.StatusOK, gin.H{
